--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,8 @@
 /.DS_Store
+/BillingApp.class
 /DBManager.class
+/Invoice.class
+/Invoice.txt
 /MainMenu.class
 /Menu.class
 /MenuApp.class
@@ -9,18 +12,13 @@
 /PromoSetApp.class
 /PromoSetCon.class
 /Reservation.class
-/Reservation.txt
 /ReservationApp.class
 /Staff.class
 /StaffApp.class
 /StaffList.txt
 /Table.class
-/Table.txt
+/TableApp.class
 /TableInfo.class
-/TableInfo.txt
 /outputMenu.txt
 /promotionList.txt
-/BillingApp.class
-/Invoice.class
-/Invoice.txt
-/TableApp.class
+/PromoSet.class
