--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,6 @@
 /.DS_Store
 /BillingApp.class
+/Customer.class
 /DBManager.class
 /Invoice.class
 /MainMenu.class
@@ -8,6 +9,7 @@
 /MenuFunc.class
 /Order.class
 /OrderApp.class
+/Person.class
 /PromoSet.class
 /PromoSetApp.class
 /Reservation.class
@@ -19,5 +21,4 @@
 /TableApp.class
 /TableInfo.class
 /Validation.class
-/Person.class
-/Customer.class
+/CustomerApp.class
